---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 28.03.2024
  Localization:
    - Update translations from Crowdin.
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 06.02.2024
  Changes:
    - Slightly change formatting of distance numbers.
    - Change "Ores produced" to "Ores mined".
  Bugfixes:
    - Teleporting the player is no longer counted as walking distance. Acrued walking distances over
      10000km is reset to zero in an attempt to fix bad statistics to something more reasonable.
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 05.02.2024
  Features:
    - Now show 'Ores produced' in victory screen.
  Changes:
    - Change table style to more closely match vanilla (#3 by _CodeGreen)
  Compatibility:
    - Added soft compatibility with Satisfactorio.
    - Now compatible with the mod Ballistic Missile.
  Localization:
    - Update translations from Crowdin.
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 31.01.2024
  Changes:
    - Statistics with tooltips now show the tooltip-info icon similar to vanilla.
    - Change formatting from Title Case to normal capitilization to more closely mimic vanilla.
  Compatibility:
    - Statistic entries can now define a custom statistic name to be displayed.
    - Statistic entries can now define a custom statistic tooltip to be displayed.
    - Statistic entries now need to explicitly define the existance of a tooltip.
  Localization:
    - Update translations from Crowdin.
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 28.01.2024
  Compatibility:
    - Better compatibility with mods that add custom train stops.
  Changes: