@@ -28,6 +28,7 @@ deaths=Deaths
 kills=Kills
 distance-walked=Distance walked
 distance-drove=Distance driven
+distance-jetpacked=Distance jetpacked
 handcrafting-time=Time spent handcrafting
 
 # 'bvs-stats' - Compatibility section
